// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Danger matches snapshot 1`] = `
<div
  className="TextInput-Container"
>
  <label
    className="TextInput-Label"
  >
     
    <input
      className="TextInput Danger"
      name={undefined}
      placeholder={undefined}
      type="text"
    />
  </label>
</div>
`;

exports[`TextInput Empty matches snapshot 1`] = `
<div
  className="TextInput-Container"
>
  <label
    className="TextInput-Label"
  >
     
    <input
      className="TextInput Primary"
      name={undefined}
      placeholder={undefined}
      type="text"
    />
  </label>
</div>
`;

exports[`TextInput Typical censored matches snapshot 1`] = `
<div
  className="TextInput-Container"
>
  <label
    className="TextInput-Label"
  >
     
    <span
      className="TextInput-Required"
    >
      *
    </span>
    <input
      className="TextInput Primary"
      name={undefined}
      placeholder={undefined}
      type="text"
    />
  </label>
</div>
`;

exports[`TextInput Typical censored with className matches snapshot 1`] = `
<div
  className="TextInput-Container"
>
  <label
    className="TextInput-Label"
  >
     
    <span
      className="TextInput-Required"
    >
      *
    </span>
    <input
      className="className TextInput Primary"
      name={undefined}
      placeholder={undefined}
      type="text"
    />
  </label>
</div>
`;

exports[`TextInput With label matches snapshot 1`] = `
<div
  className="TextInput-Container"
>
  <label
    className="TextInput-Label"
  >
    label
     
    <input
      className="TextInput Primary"
      name={undefined}
      placeholder={undefined}
      type="text"
    />
  </label>
</div>
`;

exports[`TextInput matches snapshot 1`] = `
<div
  className="TextInput-Container"
>
  <label
    className="TextInput-Label"
  >
     
    <input
      className="TextInput Primary"
      name={undefined}
      placeholder={undefined}
      type="text"
    />
  </label>
</div>
`;
